crates/solidity/testing/snapshots/bindings_output/control/unchecked/generated/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected Identifier or MemoryKeyword or StorageKeyword.
   ╭─[input.sol:4:19]
   │
 4 │ ╭─▶         unchecked { return c - b; }
 5 │ ├─▶     }
   │ │           
   │ ╰─────────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract Test {
   │          ──┬─  
   │            ╰─── def: 1
 2 │     function sub(uint a, uint b) public returns (uint) {
   │              ─┬─      ┬       ┬  
   │               ╰────────────────── def: 2
   │                       │       │  
   │                       ╰────────── def: 3
   │                               │  
   │                               ╰── def: 4
 3 │         uint c = a;
   │              ┬   ┬  
   │              ╰────── def: 5
   │                  │  
   │                  ╰── ref: 3
 4 │         unchecked { return c - b; }
   │         ────┬────  
   │             ╰────── unresolved
───╯
